Starting to pull in the data needed for the backlogs

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -13,3 +13,7 @@ parameters:
 
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    fogbugz_user: ~
+    fogbugz_password: ~
+    fogbugz_url: ~
