Start of being able to add tickets. Along with autocomplete on search

--- a/src/Vectorface/BacklogBundle/Resources/config/routing.yml
+++ b/src/Vectorface/BacklogBundle/Resources/config/routing.yml
@@ -1,3 +1,11 @@
 vectorface_backlog_main:
     pattern:  /
     defaults: { _controller: VectorfaceBacklogBundle:Default:index }
+
+vectorface_backlog_autocomplete:
+    pattern:  /autocomplete
+    defaults: { _controller: VectorfaceBacklogBundle:Default:autocomplete }
+
+vectorface_backlog_add:
+    pattern:  /add/{ixBug}
+    defaults: { _controller: VectorfaceBacklogBundle:Default:add }
