Renders backlog list, UI'ness & fetches more data from fogbugz

--- a/src/Vectorface/BacklogBundle/Resources/config/routing.yml
+++ b/src/Vectorface/BacklogBundle/Resources/config/routing.yml
@@ -9,3 +9,7 @@ vectorface_backlog_autocomplete:
 vectorface_backlog_add:
     pattern:  /add/{ixBug}
     defaults: { _controller: VectorfaceBacklogBundle:Default:add }
+
+vectorface_backlog_delete:
+    pattern:  /delete/{ixBug}
+    defaults: { _controller: VectorfaceBacklogBundle:Default:delete }
