resolves #8 - Fix link

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -24,6 +24,8 @@ framework:
 twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
+    globals:
+        fogbugz_url_ticket: %fogbugz_url_ticket%
 
 # Assetic Configuration
 assetic:
