--- a/src/Vectorface/BacklogBundle/Resources/config/services.yml
+++ b/src/Vectorface/BacklogBundle/Resources/config/services.yml
@@ -2,6 +2,7 @@ parameters:
 #    vectorface_backlog.example.class: Vectorface\BacklogBundle\Example
 
 services:
-#    vectorface_backlog.example:
-#        class: %vectorface_backlog.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    redishelper:
+        class: Vectorface\BacklogBundle\RedisHelper
+        calls:
+            - [setContainer, [@service_container]]
