- making the redis section's structure more obvious

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -19,4 +19,7 @@ parameters:
     fogbugz_url: ~
     fogbugz_url_ticket: ~
 
-    redis: ~
+    redis:
+        host: ~
+        port: ~
+        db: ~
