Removal of arrow/js still

--- a/src/Vectorface/BacklogBundle/Resources/config/routing.yml
+++ b/src/Vectorface/BacklogBundle/Resources/config/routing.yml
@@ -15,9 +15,5 @@ vectorface_backlog_delete:
     defaults: { _controller: VectorfaceBacklogBundle:Default:delete }
 
 vectorface_backlog_up:
-    pattern:  /up/{position}/{ixBug}
-    defaults: { _controller: VectorfaceBacklogBundle:Default:up }
-
-vectorface_backlog_down:
-    pattern:  /down/{position}/{ixBug}
-    defaults: { _controller: VectorfaceBacklogBundle:Default:down }
+    pattern:  /move/{ixBug}/{position}
+    defaults: { _controller: VectorfaceBacklogBundle:Default:move }
