Adding more pulls & the UI for push/pull

--- a/src/Vectorface/BacklogBundle/Resources/config/routing.yml
+++ b/src/Vectorface/BacklogBundle/Resources/config/routing.yml
@@ -17,3 +17,11 @@ vectorface_backlog_delete:
 vectorface_backlog_up:
     pattern:  /move/{ixBug}/{position}
     defaults: { _controller: VectorfaceBacklogBundle:Default:move }
+
+vectorface_backlog_pull:
+    pattern:  /pull
+    defaults: { _controller: VectorfaceBacklogBundle:Default:pull }
+
+vectorface_backlog_push:
+    pattern:  /push
+    defaults: { _controller: VectorfaceBacklogBundle:Default:push }
