--- a/src/Vectorface/BacklogBundle/Resources/config/routing.yml
+++ b/src/Vectorface/BacklogBundle/Resources/config/routing.yml
@@ -7,8 +7,8 @@ vectorface_backlog_autocomplete_users:
     defaults: { _controller: VectorfaceBacklogBundle:Default:autocompleteusers }
 
 vectorface_backlog_autocomplete_tickets:
-    pattern:  /autocomplete/tickets
-    defaults: { _controller: VectorfaceBacklogBundle:Default:autocompletetickets }
+    pattern:  /autocomplete/tickets/{type}
+    defaults: { _controller: VectorfaceBacklogBundle:Default:autocompletetickets, type: ''}
 
 vectorface_backlog_add:
     pattern:  /add/{ixBug}
@@ -33,3 +33,15 @@ vectorface_backlog_push:
 vectorface_backlog_edit:
     pattern:  /edit/{ixBug}
     defaults: { _controller: VectorfaceBacklogBundle:Default:edit }
+
+vectorface_backlog_product:
+    pattern:  /product
+    defaults: { _controller: VectorfaceBacklogBundle:Product:index }
+
+vectorface_backlog_sprint:
+    pattern:  /sprint
+    defaults: { _controller: VectorfaceBacklogBundle:Sprint:index }
+
+vectorface_backlog_sprint_view:
+    pattern:  /sprint/{id}
+    defaults: { _controller: VectorfaceBacklogBundle:Sprint:view }
