--- a/src/Vectorface/BacklogBundle/Resources/config/services.yml
+++ b/src/Vectorface/BacklogBundle/Resources/config/services.yml
@@ -8,7 +8,7 @@ services:
             - [setContainer, [@service_container]]
     fogbugzservice:
         class: Vectorface\BacklogBundle\Service\FogbugzService
-        arguments: ["@RedisService"]
+        arguments: ["%fogbugz%", "@RedisService"]
         calls:
             - [setContainer, [@service_container]]
     Vectorface.twig.fogbugz_extension:
